Changed Hello world with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file

--- a/Hello World.html
+++ b/Hello World.html
@@ -5,7 +5,10 @@
 </head>
 
 <body>
-    Hello World
+    <div>
+        <img src="images/unduhan.jpg" alt="profile image" />
+        <h2>Ahmad Rizqi</h2>
+     </div>
 </body>
 
 </html>
