Added ids for each profile element

--- a/Hello World.html
+++ b/Hello World.html
@@ -5,9 +5,9 @@
 </head>
 
 <body>
-    <div>
-        <img src="images/unduhan.jpg" alt="profile image" />
-        <h2>Ahmad Rizqi</h2>
+    <div id="profile-container">
+        <img id="profile-image" src="images/unduhan.jpg" alt="profile image" />
+        <h2 id="profile-name">Ahmad Rizqi</h2>
      </div>
 </body>
 
