--- a/Hello World.html
+++ b/Hello World.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-
-<link rel="stylesheet" href="style.css">
 <html>
 
 <head>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div id="header">Header</div>
     <div id="profile-container">
         <img id="profile-image" src="images/unduhan.jpg" alt="profile image" />
         <h2 id="profile-name">Ahmad Rizqi</h2>
-     </div>
+    </div>
 </body>
 
 </html>
